--- a/aeffect/static/stylesheets/app.css
+++ b/aeffect/static/stylesheets/app.css
@@ -886,7 +886,7 @@ form.custom .custom.disabled {
 /* The Grid ---------------------- */
 /* line 3, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/_grid.scss */
 .row {
-  width: 1000px;
+  width: 100%;
   max-width: 100%;
   min-width: 768px;
   margin: 0 auto;
@@ -896,7 +896,7 @@ form.custom .custom.disabled {
   width: auto;
   max-width: none;
   min-width: 0;
-  margin: 0 -15px;
+  margin: 0 0;
 }
 /* line 7, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/_grid.scss */
 .row.collapse .column, .row.collapse .columns {
@@ -907,7 +907,7 @@ form.custom .custom.disabled {
   width: auto;
   max-width: none;
   min-width: 0;
-  margin: 0 -15px;
+  margin: 0 0;
 }
 /* line 10, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/_grid.scss */
 .row .row.collapse {
@@ -918,7 +918,7 @@ form.custom .custom.disabled {
 .column, .columns {
   float: left;
   min-height: 1px;
-  padding: 0 15px;
+  padding: 0 0;
   position: relative;
 }
 /* line 15, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/_grid.scss */
@@ -2316,8 +2316,8 @@ ul.flyout li.active a, .nav-bar li ul li.active a {
 /* line 25, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/modules/_topbar.scss */
 .top-bar {
   background: #222222;
-  height: 70px;
-  line-height: 70px;
+  height: 45px;
+  line-height: 45px;
   margin: 0 0 0px;
   padding: 0;
   width: 100%;
@@ -2327,18 +2327,18 @@ ul.flyout li.active a, .nav-bar li ul li.active a {
 }
 /* line 28, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/modules/_topbar.scss */
 .contain-to-grid .top-bar {
-  max-width: 1000px;
+  max-width: 100%;
   margin: 0 auto;
 }
 /* line 33, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/modules/_topbar.scss */
 .top-bar > ul .name h1 {
-  line-height: 70px;
+  line-height: 45px;
   margin: 0;
 }
 /* line 34, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/modules/_topbar.scss */
 .top-bar > ul .name h1 a {
   font-weight: bold;
-  padding: 0 35px;
+  padding: 0 22.5px;
   font-size: 17px !important;
 }
 /* line 36, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/modules/_topbar.scss */
@@ -2354,8 +2354,8 @@ ul.flyout li.active a, .nav-bar li ul li.active a {
 .top-bar ul {
   margin-left: 0;
   display: inline;
-  height: 70px;
-  line-height: 70px;
+  height: 45px;
+  line-height: 45px;
   list-style: none;
   /* Main Navigation links style */
   /* Left Side <ul> */
@@ -2376,9 +2376,9 @@ ul.flyout li.active a, .nav-bar li ul li.active a {
   display: block;
   font-size: 13px;
   font-weight: bold;
-  height: 70px;
-  line-height: 70px;
-  padding: 0 23.33333px;
+  height: 45px;
+  line-height: 45px;
+  padding: 0 15px;
 }
 /* line 48, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/modules/_topbar.scss */
 .top-bar ul > li:not(.name):hover, .top-bar ul > li:not(.name).active {
@@ -2400,7 +2400,7 @@ ul.flyout li.active a, .nav-bar li ul li.active a {
 }
 /* line 58, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/modules/_topbar.scss */
 .top-bar ul > li.has-button a.button {
-  margin: 0 17.5px;
+  margin: 0 11.25px;
 }
 /* line 59, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/modules/_topbar.scss */
 .top-bar ul > li.has-button:hover {
@@ -2412,7 +2412,7 @@ ul.flyout li.active a, .nav-bar li ul li.active a {
 }
 /* line 65, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/modules/_topbar.scss */
 .top-bar ul > li.search {
-  padding: 0 23.33333px;
+  padding: 0 15px;
 }
 /* line 66, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/modules/_topbar.scss */
 .top-bar ul > li.search form {
@@ -2432,7 +2432,7 @@ ul.flyout li.active a, .nav-bar li ul li.active a {
   float: left;
   font-size: 13px;
   margin-top: -1px;
-  height: 35px;
+  height: 22.5px;
 }
 /* line 68, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/modules/_topbar.scss */
 .top-bar ul > li.search form input[type=text] + .button {
@@ -2473,7 +2473,7 @@ ul.flyout li.active a, .nav-bar li ul li.active a {
 }
 /* line 81, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/modules/_topbar.scss */
 .top-bar ul > li.has-dropdown a {
-  padding-right: 52.5px;
+  padding-right: 33.75px;
 }
 /* line 82, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/modules/_topbar.scss */
 .top-bar ul > li.has-dropdown a:after {
@@ -2483,7 +2483,7 @@ ul.flyout li.active a, .nav-bar li ul li.active a {
   height: 0;
   border: solid 5px;
   border-color: white transparent transparent transparent;
-  margin-right: 23.33333px;
+  margin-right: 15px;
   margin-top: -2.5px;
   position: absolute;
   right: 0;
@@ -2494,7 +2494,7 @@ ul.flyout li.active a, .nav-bar li ul li.active a {
   background: #222222;
   left: 0;
   margin: 0;
-  padding: 14px 0 0 0;
+  padding: 9px 0 0 0;
   position: absolute;
   visibility: hidden;
   z-index: 99;
@@ -2512,7 +2512,7 @@ ul.flyout li.active a, .nav-bar li ul li.active a {
   font-weight: normal;
   height: 100%;
   line-height: 1;
-  padding: 5px 25.33333px 5px 23.33333px;
+  padding: 5px 17px 5px 15px;
   white-space: nowrap;
 }
 /* line 87, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/modules/_topbar.scss */
@@ -2529,7 +2529,7 @@ ul.flyout li.active a, .nav-bar li ul li.active a {
   font-size: 10px;
   font-weight: bold;
   margin: 0;
-  padding-left: 23.33333px;
+  padding-left: 15px;
   text-transform: uppercase;
 }
 /* line 91, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/modules/_topbar.scss */
@@ -2622,9 +2622,9 @@ ul.flyout li.active a, .nav-bar li ul li.active a {
   display: block;
   font-weight: bold;
   font-size: 13px;
-  height: 70px;
-  line-height: 70px;
-  padding: 0 23.33333px;
+  height: 45px;
+  line-height: 45px;
+  padding: 0 15px;
 }
 /* line 133, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/modules/_topbar.scss */
 .lt-ie9 .top-bar ul li a.button {
@@ -2649,7 +2649,7 @@ ul.flyout li.active a, .nav-bar li ul li.active a {
 
 /* line 138, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/modules/_topbar.scss */
 .lt-ie9 .top-bar ul li.has-dropdown {
-  padding-right: 52.5px;
+  padding-right: 33.75px;
 }
 /* line 140, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/modules/_topbar.scss */
 .lt-ie9 .top-bar ul li.has-dropdown > ul li {
@@ -4750,7 +4750,7 @@ table.hide-for-medium {
   .row .mobile-one {
     width: 25% !important;
     float: left;
-    padding: 0 15px;
+    padding: 0 0;
   }
   /* line 201, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/modules/_mqueries.scss */
   .row .mobile-one:last-child {
@@ -4769,7 +4769,7 @@ table.hide-for-medium {
   .row .mobile-two {
     width: 50% !important;
     float: left;
-    padding: 0 15px;
+    padding: 0 0;
   }
   /* line 201, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/modules/_mqueries.scss */
   .row .mobile-two:last-child {
@@ -4788,7 +4788,7 @@ table.hide-for-medium {
   .row .mobile-three {
     width: 75% !important;
     float: left;
-    padding: 0 15px;
+    padding: 0 0;
   }
   /* line 201, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/modules/_mqueries.scss */
   .row .mobile-three:last-child {
@@ -4807,7 +4807,7 @@ table.hide-for-medium {
   .row .mobile-four {
     width: 100% !important;
     float: left;
-    padding: 0 15px;
+    padding: 0 0;
   }
   /* line 201, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/modules/_mqueries.scss */
   .row .mobile-four:last-child {
@@ -5671,7 +5671,7 @@ table.hide-for-medium {
   }
   /* line 386, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/modules/_mqueries.scss */
   .top-bar ul > li.search {
-    padding: 0 35px;
+    padding: 0 22.5px;
   }
   /* line 387, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/modules/_mqueries.scss */
   .top-bar ul > li.search form {
@@ -5688,7 +5688,7 @@ table.hide-for-medium {
   }
   /* line 395, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/modules/_mqueries.scss */
   .top-bar ul > li.has-dropdown a {
-    padding-right: 52.5px;
+    padding-right: 33.75px;
   }
   /* line 396, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/modules/_mqueries.scss */
   .top-bar ul > li.has-dropdown a:after {
@@ -5698,7 +5698,7 @@ table.hide-for-medium {
     height: 0;
     border: solid 5px;
     border-color: transparent transparent transparent rgba(255, 255, 255, 0.5);
-    margin-right: 23.33333px;
+    margin-right: 15px;
     margin-top: -4.5px;
     position: absolute;
     top: 50%;
@@ -5739,7 +5739,7 @@ table.hide-for-medium {
   }
   /* line 407, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/modules/_mqueries.scss */
   .top-bar ul > li.has-dropdown.moved .dropdown li a, .top-bar ul > li.has-dropdown.moved .dropdown li label {
-    padding: 0 35px;
+    padding: 0 22.5px;
   }
   /* line 408, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/modules/_mqueries.scss */
   .top-bar ul > li.has-dropdown.moved .dropdown li a:hover {
@@ -5760,7 +5760,7 @@ table.hide-for-medium {
   .top-bar ul > li.has-dropdown.moved .back.title a:before {
     position: absolute;
     top: 50%;
-    left: 30px;
+    left: 17.5px;
     margin-top: -5px;
     width: 0;
     height: 0;
@@ -5797,7 +5797,7 @@ table.hide-for-medium {
   }
   /* line 425, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/modules/_mqueries.scss */
   .top-bar ul > li.has-dropdown .dropdown li.has-dropdown > a {
-    padding-right: 52.5px;
+    padding-right: 33.75px;
   }
   /* line 426, ../../../../../../../var/lib/gems/1.9.1/gems/zurb-foundation-3.2.2/scss/foundation/components/modules/_mqueries.scss */
   .top-bar ul > li.has-dropdown .dropdown li.has-dropdown > a:after {
